--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<java.version>1.8</java.version>
 		<wro4j.version>1.8.0</wro4j.version>
 		<angularjs.version>1.6.4</angularjs.version>
-		<bootstrap.version>3.3.7-1</bootstrap.version>
+		<bootstrap.version>4.0.0-alpha.6</bootstrap.version>
 		<jquery.version>3.2.1</jquery.version>
 		<jasmine.version>2.0.0</jasmine.version>
 	</properties>
