Photo upload, file storage system and output display on the homepage.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,15 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # SECURITY
 security.user.password = user
+
+# MULTIPART
+spring.http.multipart.enabled=true 
+spring.http.multipart.location=${java.io.tmpdir}
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+spring.http.multipart.resolve-lazily=false 
+
+#FILE STORAGE 
+#(to aboid storing uploaded images in project directory (war file)
+# images are located in an external directory
+filestorage.absolutepath = /home/daniel/DevWorkshop/Spring/Futurestaurant/uploads/
