--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<bootstrap.version>4.0.0-alpha.6</bootstrap.version>
 		<jquery.version>3.2.1</jquery.version>
 		<jasmine.version>2.0.0</jasmine.version>
+		<commons.io.version>2.4</commons.io.version>
+		<commons.fileupload.version>1.3.1</commons.fileupload.version>
 	</properties>
 
 	<dependencies>
@@ -63,7 +65,16 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons.fileupload.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons.io.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>angularjs</artifactId>
